# vrn-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vernesoft/: __init__.py  _client.py
src/vernesoft/_core/: __init__.py  errors.py  http.py  types.py
src/vernesoft/_resources/: __init__.py
src/vernesoft/_resources/gate/: __init__.py  _gate.py  _identities.py  _settings.py  _tokens.py  _types.py
src/vernesoft/_resources/relay/: __init__.py  _messages.py  _relay.py  _types.py
tests/: test_gate.py  test_relay.py  test_verne.py
