[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vernesoft"
version = "1.1.0"
description = "Official Python SDK for the Verne Nautilus platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx", "mypy", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/vernesoft"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
