[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vernesoft"
version = "1.1.0"
description = "Official Python SDK for the Verne Nautilus platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Verne Software" }]
keywords = ["verne", "nautilus", "webhook", "relay", "auth", "gate", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://vernesoft.com"
Documentation = "https://docs.vernesoft.com"
Repository = "https://github.com/Verne-Software/vrn-sdk-python"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx", "mypy", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/vernesoft"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
